OLMIS-911: Rename Period -> ProcessingPeriod and Schedule -> ProcessingSchedule
